--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,8 @@ show_downloads: False
 navigation:
   - title: Home
     url: /
+  - title: What is Astrobiology?
+    url: astrobiology
   - title: Research
     url: research
   - title: Outreach
