--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@ show_downloads: False
 navigation:
   - title: Home
     url: /
-  - title: What is Astrobiology?
-    url: astrobiology
-  - title: Research
+  - title: Research Topics
     url: research
+  - title: Publications and Code
+    url: publications
   - title: Outreach
     url: outreach
   - title: Curriculum Vitae
